preview link on company profile page

--- a/templates/live/company_profile/comp_profile_show.html
+++ b/templates/live/company_profile/comp_profile_show.html
@@ -39,7 +39,10 @@
                      
                 </div-->
                 
-            <h2> <%=companyprof.name%></h2>
+            <h2> <%=companyprof.name%></h2> 
+            <span class="page-meta"><strong>The company on i/oGrow Live:</strong>
+             <a href="/live/companies/<%=companyprof.organizationid%>/" target="new">preview</a> </span><br><br>
+
              <span class="page-meta"><i class="icon-pencil"><a ng-click="editcompanyprofile()" class="btn-link addAnotherPhone" data-toggle="modal" > {{_("Edit")}} </a></i> </span>
 
            
