--- a/templates/live/live_show_index.html
+++ b/templates/live/live_show_index.html
@@ -38,7 +38,7 @@
                 <li class="span3 mix category_1">
                 
                 <a href="/live/shows/{{upcoming.id}}/" >
-                    <img class="hangout-icon" src="/static/img/google_hangouts .png">
+                    <img class="hangout-icon" src="">
                  <span> {{upcoming.name}} :  ({{upcoming.starts_at}} to {{upcoming.ends_at}})</span> </a>
                  By {{upcoming.organization_name}}  
                                                           
