--- a/templates/live/live_company_page.html
+++ b/templates/live/live_company_page.html
@@ -50,7 +50,7 @@
                                   <ul class="grid-v1 thumbnails">
                                           
                                        
-                                          
+                                           {%if upcoming_shows %}
                                              {%for upcoming_show in upcoming_shows%}
                                       <li class="span3 mix category_1"><a href="/live/shows/{{upcoming_show.id}}/">
                                       {% if upcoming_show.youtube_url %}
@@ -63,6 +63,17 @@
                                         </a>
                                       </li>
                                       {%endfor%}
+                                      {%else%}
+                                <div class="span6 responsive" data-tablet="span6" data-desktop="span4">
+                                <div class="dashboard-stat cards">
+                                <div class="blank_slate_arrow"></div>
+                                <div class="blank_slate_body">
+                                   <img src="/static/img/blankshow.png" align="center">
+                                  <p class="lead"></p>
+                                </div>
+                                </div>
+                                </div>
+                                      {%endif%}
                                                                                     
                                         
                                          
@@ -72,6 +83,7 @@
                                       <div class="filter-v1 margin-bottom-40">
                                                                         
                                       <ul class="grid-v1 thumbnails"> 
+                                       {%if recentlyshows%}
                                        {%for recentshow in recentlyshows%}
                                     <li class="span3 mix category_1"><a href="/live/shows/{{recentshow.id}}/" target="new">
                                          {% if recentshow.youtube_url %}
@@ -83,6 +95,18 @@
                                         </a>
                                       </li>
                                       {%endfor%}
+                                      {%else%}
+                                      <div class="span6 responsive" data-tablet="span6" data-desktop="span4">
+                                <div class="dashboard-stat cards">
+                                <div class="blank_slate_arrow"></div>
+                                <div class="blank_slate_body">
+                                   <img src="/static/img/blankshow.png" align="center">
+                                  <p class="lead"></p>
+                                </div>
+                                </div>
+                                </div>
+
+                                      {%endif%}
 
                                       </ul>
                                   </div>
@@ -224,7 +248,7 @@
                   <div class="blank_slate_arrow"></div>
                   <div class="blank_slate_body">
                       <img src="/static/img/blankshow.png" align="center">
-                      <p class="lead">{{ _('Product Videos pages  let you present your product.') }}</p>
+                      <p class="lead"></p>
                   </div>
                
                                   
@@ -264,7 +288,7 @@
                                          <div class="blank_slate_arrow"></div>
                                      <div class="blank_slate_body">
                                         <img src="/static/img/blankshow.png" align="center">
-                                      <p class="lead">{{ _('Customer Story pages  give a customer to present and share their successes.') }}</p>
+                                      <p class="lead"></p>
                                        </div>              
                                       </div>
                                   </div>
