Fixing a bug related to user sessions

--- a/templates/live/live_base.html
+++ b/templates/live/live_base.html
@@ -130,6 +130,7 @@
           <!-- END USER LOGIN DROPDOWN -->
           <!-- END USER LOGIN DROPDOWN -->
         </ul>
+
         <ul class="nav pull-right">
           <!-- BEGIN NOTIFICATION DROPDOWN -->   
           
@@ -141,6 +142,13 @@
           
           <!-- END TODO DROPDOWN -->               
           <!-- BEGIN USER LOGIN DROPDOWN -->
+           <li>
+            <a href="/live/companies/">
+            
+            
+            <span class="username">Features</span>
+            </a>
+          </li>
           <li>
             <a href="/live/companies/">
             
@@ -148,6 +156,7 @@
             <span class="username">Companies</span>
             </a>
           </li>
+          
 
           <!-- END USER LOGIN DROPDOWN -->
           <!-- END USER LOGIN DROPDOWN -->
