fix mug My company

--- a/templates/live/live_base.html
+++ b/templates/live/live_base.html
@@ -230,6 +230,7 @@
     <script src="/static/app/scripts/vendor/angular.js" ></script>
     <script src="/static/frontend/app/scripts/app.js" ></script>
    <script src="/static/frontend/app/scripts/controllers/iogrowlivecontrollers.js" ></script>
+    <script src="/static/frontend/app/scripts/controllers/companylivecontrollers.js" ></script>
     <script src="/static/frontend/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="/static/app/scripts/vendor/ui-bootstrap-0.5.0.js" ></script>
     <script src="/static/app/scripts/vendor/ui-bootstrap-tpls-0.5.0.js"></script>
