creating mapService, optimizing accounts,conntacts .search apis

--- a/templates/base.html
+++ b/templates/base.html
@@ -236,12 +236,12 @@
 
 
 
-         //var ROOT = '/_ah/api';
+         var ROOT = '/_ah/api';
 
 
    
 
-    var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+    //var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
@@ -306,6 +306,7 @@
 
 
   <script src="static/app/scripts/services/authservices.js"></script>
+  <script src="static/app/scripts/services/mapservices.js"></script>
   <script src="static/app/scripts/services/productservices.js"></script>
   <script src="static/app/scripts/services/accountservices.js"></script>
   <script src="static/app/scripts/services/contactservices.js"></script>
