--- a/templates/accounts/show.html
+++ b/templates/accounts/show.html
@@ -308,6 +308,10 @@
                                 </div>
                                 <p><%=account.introduction%></p>                         
                               </div>
+                              <div class="news-blocks blank-card blank-card-yellow">
+                                <h3>Google Maps</h3>
+                                <div id="gmap_canvas" style="width:100%;height:300px;"></div>                         
+                              </div>
                             
                           </div>
                           
