Adding Lead sources

--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -81,6 +81,17 @@
                         </div>
                     </div>
                      <div class="control-group">
+                        <label  class="control-label">{{_("Lead Source")}} </label>
+                       
+                        <div class="controls">
+                          <select ng-model="lead.source" ><option value="">--None--</option><option value="ioGrow Live">ioGrow Live</option><option value="Social Media">Social Media</option><option value="Web Source">Web Site</option><option value="Phone Inquiry">Phone Inquiry</option><option value="Partner Referral">Partner Referral</option><option value="Purchased List">Purchased List</option><option value="Other">Other</option></select>
+                          
+                         
+                        </div>
+                    </div>
+                    
+
+                     <div class="control-group">
                         <label  class="control-label">{{_("Status")}} </label>
                        
                         <div class="controls">
