Correct return url on Product video and Customer stories

--- a/templates/live/live_base.html
+++ b/templates/live/live_base.html
@@ -146,7 +146,7 @@
             <a href="/live/companies/">
             
             
-            <span class="username">Features</span>
+            <!--span class="username">Features</span-->
             </a>
           </li>
           <li>
