Blankstate on  Group list page

--- a/templates/admin/groups/list.html
+++ b/templates/admin/groups/list.html
@@ -108,7 +108,21 @@
                                   
                 </div>
               </div>
+              <div ng-show="blankstategroup" class="span12 responsive" data-tablet="span6" data-desktop="span12">
+                <div class="dashboard-stat cards">
+                  
+                  
+                  <div class="blank_slate_arrow"></div>
+                  <div class="blank_slate_body">
+                      <img src="/static/img/accounts_blank.png">
+                      <p class="lead">{{ _('Manage easily your Group.') }}</p>
+                  </div>
+               
+                                  
+                </div>
               </div>
+              </div>
+              
             </div>
           <div class="row-fluid">
             <div class="pagination pull-right" ng-hide="isLoading">
