working on carousel welcome page

--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -32,7 +32,7 @@
         <!-- BEGIN ABOUT INFO -->   
         <div class="row-fluid margin-bottom-30">
             <!-- BEGIN INFO BLOCK -->               
-            <div class="span12 front-carousel">
+            <div class="span12 front-carousel welcome-carousel">
                 <div id="myCarousel" class="carousel slide">
                     <!-- Carousel items -->
                     <div class="carousel-inner">
@@ -42,8 +42,21 @@
                                 <p>Manage your business audience relationship with ioGrow everywhere!</p>
                             </div>
                         </div>
+                         <div class="item">
+                            <img src="/static/img/carousel/iogrow_leads.jpg" alt="">
+                            <div class="carousel-caption">
+                                <p>ioGrow help you organize informations about leads so they can be followed up on and qualified quickly.</p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="/static/img/carousel/google_integration_iogrow.jpg" alt="">
+                            <div class="carousel-caption">
+                                <p>Smoothly integrated with Google technologies.</p>
+                            </div>
+                        </div>
                         
                     </div>
+
                     <!-- Carousel nav -->
                     <a class="carousel-control left" href="#myCarousel" data-slide="prev">
                         <i class="icon-angle-left"></i>
@@ -52,6 +65,9 @@
                         <i class="icon-angle-right"></i>
                     </a>
                 </div>                
+            </div>
+            <div class="span12">
+                <center><a href="/sign-in" class="btn green call-to-action"> Start Growing your Company Now!</a></center>
             </div>
             <!-- END CAROUSEL -->             
         </div>
