--- a/templates/live/live_base.html
+++ b/templates/live/live_base.html
@@ -209,8 +209,8 @@
       window.is_signed_in = false;
       window.authResult = undefined;
       var apisToLoad;
-      var ROOT = '/_ah/api';
-      //var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+      //var ROOT = '/_ah/api';
+      var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
       var callback = function() {
         if (--apisToLoad == 0) {
           apiLoaded();
@@ -248,7 +248,7 @@
     <script src="/static/frontend/plugins/respond.min.js"></script>  
     <![endif]-->   
     <!-- END CORE PLUGINS -->
-    <script src="/static/frontend/scripts/app.js"></script>  
+     
     <script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
     <script src="/static/app/scripts/vendor/jquery.ui.map.min.js"></script> 
     
