updating signin and signup pages

--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -225,15 +225,10 @@ function onSignInCallback(authResult) {
       <div class="inner-product-info">
               <div class="container">
                 <div class="row-fluid margin-bottom-20">
-                  <div class="span8 margin-bottom-20 product-info">
-                    <h2>i/oGrow Platform</h2>
-                    
-                    <ul>
-                    <li>i/oGrow is a platform targeted startups and small companies to grow their business, assisting them to build and manage an effective eco-system of customers, partners and organizations. </li>
-<li>We believe that simplicity, speed, ease of use, and clarity are very important on a daily business work.</li>
-<li>i/oGrow is API-first platfrom, designed  for developers, independent software vendors and customers aiming to connect different applications and third-party services. Google Cloud Endpoints allows us to build an API that feels and behaves like Google services APIs such as Google Drive API; That helps developers to understand the API easier. <a href="/_ah/api/explorer" target="_blank">(i/oGrow API explorer)</a></li>
-                    </ul>
-                  </div>
+                 <div class="span8 front-carousel welcome-carousel">
+                     <h2>Start Growing your Business Now!</h2>
+                    <img src="/static/img/carousel/iogrowlive.jpg" alt="">               
+                 </div>
                   <div class="span4 margin-bottom-20">
                      <div class="signin-box"> 
                       <div id="gConnect">
@@ -271,6 +266,7 @@ function onSignInCallback(authResult) {
     </div>
    
   </div>
+
   <!-- END FOOTER -->
   <!-- BEGIN JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
   <!-- BEGIN CORE PLUGINS -->   
