--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -65,14 +65,10 @@
       <div class="inner-product-info">
               <div class="container">
                 <div class="row-fluid margin-bottom-20">
-                  <div class="span8 margin-bottom-20 product-info">
-                    <h2>i/oGrow Platform</h2>
-                   <ul>
-                    <li>i/oGrow is a platform targeted startups and small companies to grow their business, assisting them to build and manage an effective eco-system of customers, partners and organizations. </li>
-<li>We believe that simplicity, speed, ease of use, and clarity are very important on a daily business work.</li>
-<li>i/oGrow is API-first platfrom, designed  for developers, independent software vendors and customers aiming to connect different applications and third-party services. Google Cloud Endpoints allows us to build an API that feels and behaves like Google services APIs such as Google Drive API; That helps developers to understand the API easier. <a href="/_ah/api/explorer" target="_blank">(i/oGrow API explorer)</a></li>
-                    </ul>
-                  </div>
+                  <div class="span8 front-carousel welcome-carousel">
+                     <h2>Smoothly integrated with Google technologies.</h2>
+                    <img src="/static/img/carousel/google_integration_iogrow.jpg" alt="">               
+                 </div>
                   <div class="span4 margin-bottom-20">
                      <div class="signin-box"> 
                         <img class="google-avatar" src="{{userinfo.google_public_profile_photo_url}}"/>
