--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -302,7 +302,7 @@
                           <div class="span6">
                             
                                 <div class="news-blocks blank-card blank-card-yellow">
-                                <h3>Account Informations</h3>
+                                <h3>Lead Informations</h3>
                                 <div class="news-block-tags">
                                   <strong>Phone</strong>
                                  
