show product videos and customer stories on company page #86

--- a/templates/live/live_company_page.html
+++ b/templates/live/live_company_page.html
@@ -223,7 +223,7 @@
                       <div class="tab-pane row-fluid fade" id="tab-3">
                                   <h2>Products <a href="#"><small></small></a></h2>
                                   {%if productvideo%}
-                                  <div class="filter-v1 margin-bottom-40">
+                                  <div >
                               
                                 <ul class="grid-v1 thumbnails">
                                   
@@ -262,7 +262,7 @@
                         <div class="tab-pane row-fluid fade" id="tab-4">
                                   <h2>Customer Stories <a href="#"><small></small></a></h2>
                                    {%if customerstory%}
-                                  <div class="filter-v1 margin-bottom-40">
+                                  <div >
                               
                                     <ul class="grid-v1 thumbnails">
                                       {%for custstory in customerstory%}
