--- a/templates/live/live_show_index.html
+++ b/templates/live/live_show_index.html
@@ -52,7 +52,7 @@
                   <div class="blank_slate_arrow"></div>
                   <div class="blank_slate_body">
                       <img src="/static/img/blankshow.png" align="center">
-                      <p class="lead"></p>
+                      <p class="lead">Big companies can spend lot of money on advertising, but small companies can’t . So why not following a new way: Instead of trying to out-advertise your competitors, try to build your own audience. Speak, share information that’s valuable with people and you will create a whole different connection. You will gain more trust and more respect. The audience care often about what you have to say</p>
                   </div>
                
                                   
