Fixing bugs with Google Maps #87

--- a/templates/live/company_profile/comp_profile_show.html
+++ b/templates/live/company_profile/comp_profile_show.html
@@ -141,7 +141,7 @@
                               </div>
                               <div class="news-blocks blank-card blank-card-yellow">
                                 <h3>Google Maps</h3>
-                                <div id="map_canvas" style="width:100%;height:300px;"></div>                         
+                                <div id="gmap_canvas" style="width:100%;height:300px;"></div>                         
                               </div>
                             
                           </div>
