--- a/templates/accounts/list.html
+++ b/templates/accounts/list.html
@@ -59,7 +59,9 @@
                         <label  class="required control-label">{{_("Type")}}</label>
                        
                         <div class="controls">
-                          <input type="text"   ng-model="account.account_type" placeholder="{{ _('eg: customer, partner, investor') }}">
+                         
+                          <select value="Customer" ng-model="account.account_type"> 
+                         <option value="Competitor">Competitor</option><option value="Customer">Customer</option><option value="Distributor">Distributor</option><option value="Integrator">Integrator</option><option value="Investor">Investor</option><option value="Partner">Partner</option><option value="Press">Press</option><option value="Prospect">Prospect</option><option value="Reseller">Reseller</option><option value="Supplier">Supplier</option><option value="Vendor">Vendor</option><option value="Other">Other</option></select>
                           
                         </div>
                     </div>
@@ -67,7 +69,9 @@
                         <label  class="required control-label">{{_("Industry")}} </label>
                        
                         <div class="controls">
-                          <input type="text"   ng-model="account.industry" placeholder="{{ _('eg: tech, health, energy') }}">
+                         
+                          <select ng-model="account.industry">
+                          <option value="">--None--</option><option value="Agriculture">Agriculture</option><option value="Apparel">Apparel</option><option value="Banking">Banking</option><option value="Biotechnology">Biotechnology</option><option value="Chemicals">Chemicals</option><option value="Communications">Communications</option><option value="Construction">Construction</option><option value="Consulting">Consulting</option><option value="Education">Education</option><option value="Electronics">Electronics</option><option value="Energy">Energy</option><option value="Engineering">Engineering</option><option value="Entertainment">Entertainment</option><option value="Environmental">Environmental</option><option value="Finance">Finance</option><option value="Food &amp; Beverage">Food &amp; Beverage</option><option value="Government">Government</option><option value="Healthcare">Healthcare</option><option value="Hospitality">Hospitality</option><option value="Insurance">Insurance</option><option value="Machinery">Machinery</option><option value="Manufacturing">Manufacturing</option><option value="Media">Media</option><option value="Not For Profit">Not For Profit</option><option value="Recreation">Recreation</option><option value="Retail">Retail</option><option value="Shipping">Shipping</option><option value="Technology">Technology</option><option value="Telecommunications">Telecommunications</option><option value="Transportation">Transportation</option><option value="Utilities">Utilities</option><option value="Other">Other</option></select>
                           
                         </div>
                     </div>
