--- a/templates/accounts/list.html
+++ b/templates/accounts/list.html
@@ -153,7 +153,7 @@
             <div class="span3">
               <div class="btn-group pull-right">
                                     <a class="btn" href="#" data-toggle="dropdown">
-                                    Sort by
+                                    {{ _('Sort by') }}
                                     <i class="icon-angle-down"></i>
                                     </a>
                                     <ul class="dropdown-menu">
