--- a/templates/base.html
+++ b/templates/base.html
@@ -309,6 +309,7 @@
   <script src="static/app/scripts/services/accountservices.js"></script>
   <script src="static/app/scripts/services/contactservices.js"></script>
   <script src="static/app/scripts/services/opportunityservices.js"></script>
+  <script src="static/app/scripts/services/needservices.js"></script>
   
 
   <!--script src="static/app/scripts/services/services.js" ></script-->
