--- a/templates/needs/show.html
+++ b/templates/needs/show.html
@@ -168,7 +168,7 @@
             <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"> <%=need.about_name%> </a>  >   {{_("Customer Needs")}} > <%=need.name %></h2>
           <span ng-show="need.description" class="contact-title"><strong>Description: <%=need.description %></strong></span><br>
            <span ng-show="need.priority">{{_("Priority")}}: <a class="tag" href="/#/search/type:Need <%=need.priority%>">#<%=need.priority %></a></span><br>
-           <span ng-show="need.status">{{_("Status")}}: <a class="tag" href="/#/search/type:Need <%=neeed.status%>">#<%=need.status %></a></span><br>
+           <span ng-show="need.need_status">{{_("Status")}}: <a class="tag" href="/#/search/type:Need <%=need.need_status%>">#<%=need.need_status %></a></span><br>
             
             <span class="page-meta"><i class="icon-pencil"><a ng-click="editcase()" class="btn-link addAnotherPhone" data-toggle="modal" > {{_("Edit")}}</a></i> |  <i class="icon-trash"><a ng-click="editbeforedelete()" class="btn-link addAnotherPhone"> {{_("Delete")}}</a></i></span>
 
@@ -474,56 +474,57 @@
         <!-- END PAGE CONTENT-->
       </div>
       <!--HKA 09.11.2013 Edit Case -->
-             <div id="EditCaseModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+             <div id="EditNeedModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3 id="myModalLabel">{{_("Edit Case")}}</h3>
+                <h3 id="myModalLabel">{{_("Edit Need")}}</h3>
               </div>
 
               <div class="modal-body">
-                 <form id="editCase" name="editlead" ng-submit="updatCasetHeader(casee)" class="form-horizontal"> 
+                 <form id="editNeed" name="editlead" ng-submit="updatNeed(need)" class="form-horizontal"> 
                 
 
                   <div class="control-group">
                         <label  class="required control-label">{{_("Name")}} *</label>
                        
                         <div class="controls">
-                          <input type="text" required id="id_lastname" ng-model="casee.name">
+                          <input type="text" required id="id_lastname" ng-model="need.name">
                           
                         </div>
                     </div>
+                     <div class="control-group">
+                        <label  class="required control-label">{{_("description")}}</label>
+                       
+                        <div class="controls">
+                          <textarea id="noteBody" class="input-block-level ng-pristine ng-valid" rows="3" ng-model="need.description"></textarea>
+                          
+                        </div>
+                    </div>
+
                     <div class="control-group">
                         <label  class="required control-label">{{_("Priority")}}</label>
                        
                         <div class="controls">
-                          <input type="text"  id="id_priority" ng-model="casee.priority">
+                          <select class="input-xlarge" ng-model="need.priority">
+                            <option >Low</option>
+                            <option >Medium</option>
+                            <option >High</option>
+                          </select>
                           
                         </div>
                     </div>
-                    <!--div class="control-group">
-                        <label  class="required control-label">{{_("Status")}} </label>
-                       
-                        <div class="controls">
-                          <input type="text"  required id="id_status" ng-model="casee.status">
-                          
-                        </div>
-                    </div-->
-                    <div class="control-group">
-                        <label  class="required control-label">{{_("Labels")}} </label>
-                       
-                        <div class="controls">
-                          <input type="text"  required id="id_type_case" ng-model="casee.type_case">
-                          
-                        </div>
-                    </div>
+                   
+                   
                  <div class="control-group">
                         <label  class="required control-label">{{_("Status")}} </label>
                         
                         <div class="controls">
-                          <select ng-model="status_selected" ng-options="stat.status for stat in casesatuses" >
-                            <option value=""><%=casee.status%> </option>
-                            <!--option value=""><%=status_selected.status%></option-->
+                          <select ng-model="need.need_status">
+                               <option value="pending">Hypothese to test</option>
+                               <option value="testing">Testing</option>
+                               <option value="validated">Validated</option>
+                               <option value="rejected">Rejected</option> 
                           </select>
                          
                         </div>                       
