Black point on recently aired (show)   Fix #100

--- a/templates/live/live_show_index.html
+++ b/templates/live/live_show_index.html
@@ -67,10 +67,10 @@
           
         <div class="filter-v1 margin-bottom-40">
             
-            <ul >
+            <ul class="grid-v1 thumbnails">
             {%if recently_shows %}
                 {%for recent in recently_shows%}
-                <li class="span3 mix category_1">
+                <li class="span3">
                 
                 <a href="/live/shows/{{recent.id}}/">
                     
